tests/errors/preprocessor/020_branch.c
#if 0
int a = 0; #endif